MDEV-30400 Assertion height == btr_page_get_level() on INSERT